@@ -9,7 +9,7 @@
         <script src="http://localhost:5500/bundle.js"></script>
       </div>
       <div id="photos">
-        <!-- <script src="http://localhost:3000/bundle.js"></script> -->
+        <script src="http://localhost:3000/bundle.js"></script>
       </div>
       <div id="description">
         <script src="http://localhost:7878/index.js"></script>
